feat: homepage and mainpage

--- a/frontend/src/components/Login/Login.module.css
+++ b/frontend/src/components/Login/Login.module.css
@@ -1,9 +1,12 @@
 .login {
-    width: 50%;
+    width: 38%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 20vh;
+
+    background-color: white;
+    padding-top: 4rem;
+    padding-bottom: 5rem;
 }
 
 .form {
@@ -12,8 +15,9 @@
     align-items: flex-end;
 }
 
-h1 {
-    font-size: 4rem;
+.caption {
+    font-size: 3rem;
+    margin-top: 0;
 }
 
 .formItem {
@@ -22,15 +26,16 @@ h1 {
 }
 
 .formItem input {
-    background-color: #ededed;
+    background-color: #f5f5f5;
     border: none;
-    border-bottom: 2px solid #ddd;
+    border: 1px solid rgb(181, 181, 181);
     height: 2rem;
     width: 22rem;
     font-size: 1rem;
     margin-left: 0.5rem;
     font-family: inherit;
     padding: 0 0.5rem;
+    color: var(--main-text);
 }
 
 .formItem input:focus {
@@ -44,7 +49,7 @@ h1 {
     margin-bottom: 1rem;
     height: 3rem;
     font-size: 1rem;
-    background-color: #356c91;
+    background-color: var(--dark-yellow);
     color: white;
     border: none;
     font-family: inherit;
@@ -53,14 +58,14 @@ h1 {
 
 .buttonLogIn:hover,
 .buttonLogIn:active {
-    color: #356c91;
-    background-color: rgba(53, 108, 145, 0.3);
-    border: 1px solid #356c91;
+    color: var(--dark-yellow);
+    background-color: #fff4df;
+    border: 1px solid var(--dark-yellow);
 }
 
 .registerLink {
     font-size: 0.8rem;
-    color: #244861;
+    color: var(--dark-yellow);
     align-self: center;
 }
 
@@ -70,9 +75,13 @@ h1 {
     margin: auto;
 }
 
-@media (max-width: 60rem) {
-    h1 {
-        font-size: 3.5rem;
+@media (max-width: 68rem) {
+    .login {
+        width: 50%;
+    }
+
+    .caption {
+        font-size: 2.5rem;
     }
 
     .formItem input {
@@ -80,11 +89,15 @@ h1 {
     }
 }
 
+@media (max-width: 50rem) {
+    .login {
+        width: 60%;
+    }
+}
+
 @media (max-width: 40rem) {
 
     .login {
         width: 100%;
-        margin-top: 2vh;
-        margin-bottom: 15vh;
     }
 }
