--- a/frontend/src/components/Navbar/Navbar.module.css
+++ b/frontend/src/components/Navbar/Navbar.module.css
@@ -3,15 +3,16 @@
     justify-content: space-between;
     align-items: center;
 
-    height: 3rem;
-    background-color: #356c91;
-    color: white;
-    padding: 0 2rem;
+    height: 3.5rem;
+    background-color: white;
+    color: var(--main-text);
+    padding: 0 7%;
+    box-shadow: 1px 1px 5px #bebebe;
 }
 
 .link {
     text-decoration: none;
-    color: white;
+    color: var(--main-text);
     padding: 0.5rem 1rem;
     font-size: 0.95rem;
 }
@@ -19,7 +20,25 @@
 .link:hover,
 .link:active {
     background-color: rgba(255, 255, 255, 0.6);
-    color: #356c91;
+    color: var(--dark-yellow);
+}
+
+.logoLink { 
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+}
+
+.logo {
+    width: 2.5rem;
+    height: 2.5rem;
+}
+
+.logoText {
+    color: var(--yellow);
+    font-weight: bold;
+    margin-left: -0.9rem;
+    font-size: 1.5rem;
 }
 
 .menuIcon {
@@ -32,7 +51,8 @@
     z-index: 101;
     top: 0;
     right: 0;
-    background-color: #356c91;
+    background-color: white;
+    color: var(--main-text);
     width: 60%;
     height: 100vh;
 }
@@ -45,7 +65,7 @@
 
 .mobileLink {
     text-decoration: none;
-    color: white;
+    color: var(--main-text);
     padding: 0.5rem 2rem;
     font-size: 0.95rem;
 }
@@ -53,7 +73,7 @@
 .mobileLink:hover,
 .mobileLink:active {
     background-color: rgba(255, 255, 255, 0.6);
-    color: #356c91;
+    color: var(--dark-yellow);
 }
 
 .backdrop {
@@ -66,6 +86,13 @@
     background-color: rgba(0, 0, 0, 0.5);
 }
 
+@media (max-width: 45rem) {
+    .link {
+        font-size: 0.85rem;
+        padding: 0.5rem;
+    }
+}
+
 @media (max-width: 40rem) {
     .link {
         display: none;
@@ -73,5 +100,15 @@
 
     .menuIcon {
         display: inline;
+    }
+
+    .logo {
+        width: 2.3rem;
+        height: 2.3rem;
+    }
+
+    .logoText {
+        font-size: 1.3rem;
+        margin-left: -0.8rem;
     }
 }
