--- a/frontend/src/pages/Mainpage/Mainpage.module.css
+++ b/frontend/src/pages/Mainpage/Mainpage.module.css
@@ -1,25 +1,15 @@
 .page {
     display: flex;
+    justify-content: center;
+    align-items: center;
     height: 100vh;
+
+    background: url('../../images/bg2.jpg') center/cover;
 }
 
-
-.image {
-    width: 50%;
-    background: linear-gradient(to left, rgba(255, 255, 255, 0) 30%, rgba(255, 255, 255, 1)), 
-        url('../../images/login.jpg') right/cover;
-    opacity: 0.7;
-    height: 100%;
-}
 
 @media (max-width: 40rem) {
     .page {
         flex-direction: column-reverse;
-    }
-
-    .image {
-        width: 100%;
-        background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 30%, rgba(255, 255, 255, 1)), 
-        url('../../images/login.jpg') right/cover;
     }
 }
