--- a/frontend/src/components/Registration/Registration.module.css
+++ b/frontend/src/components/Registration/Registration.module.css
@@ -1,9 +1,12 @@
 .login {
-    width: 50%;
+    width: 38%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 8vh;
+
+    background-color: white;
+    padding-top: 3rem;
+    padding-bottom: 4rem;
 }
 
 .form {
@@ -12,8 +15,9 @@
     align-items: flex-end;
 }
 
-h1 {
-    font-size: 3.5rem;
+.caption {
+    font-size: 3rem;
+    margin-top: 0;
 }
 
 .formItem,
@@ -25,34 +29,23 @@ h1 {
 .formItem input,
 .checkbox,
 .select {
-    background-color: #ededed;
+    background-color: #f5f5f5;
     border: none;
-    border-bottom: 2px solid #ddd;
+    border: 1px solid rgb(181, 181, 181);
     height: 2rem;
     width: 22rem;
     font-size: 1rem;
     margin-left: 0.5rem;
     padding-left: 0.5rem;
     font-family: inherit;
+    color: var(--main-text);
 }
 
 .select {
     outline: none;
-    width: 22.6rem;
-}
-
-.checkbox {
-    border-bottom: 2px solid #ebebeb;
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    color: #333333;
-}
-
-.checkbox > input {
-    margin: 0;
-    margin-right: 0.5rem;
-    width: auto;
+    width: 22.8rem;
+    height: 2.25rem;
+    color: #727272;
 }
 
 .formItem input:focus {
@@ -62,11 +55,11 @@ h1 {
 .buttonLogIn {
     width: 50%;
     align-self: center;
-    margin-top: 3rem;
+    margin-top: 2rem;
     margin-bottom: 1rem;
     height: 3rem;
     font-size: 1rem;
-    background-color: #356c91;
+    background-color: var(--dark-yellow);
     color: white;
     border: none;
     font-family: inherit;
@@ -75,33 +68,38 @@ h1 {
 
 .buttonLogIn:hover,
 .buttonLogIn:active {
-    color: #356c91;
-    background-color: rgba(53, 108, 145, 0.3);
-    border: 1px solid #356c91;
+    color: var(--dark-yellow);
+    background-color: #fff4df;
+    border: 1px solid var(--dark-yellow);
 }
 
 .registerLink {
     font-size: 0.8rem;
-    color: #244861;
+    color: var(--dark-yellow);
     align-self: center;
 }
 
-@media (max-width: 60rem) {
-    h1 {
-        font-size: 3rem;
+@media (max-width: 68rem) {
+    .login {
+        width: 50%;
     }
 
-    .formItem input,
-    .checkbox {
+    .caption {
+        font-size: 2.5rem;
+    }
+
+    .formItem input {
         width: 19rem;
     }
 
     .select {
-        width: 19.6rem;
+        width: 19.75rem;
     }
+}
 
-    .checkbox > input {
-        width: auto;
+@media (max-width: 50rem) {
+    .login {
+        width: 70%;
     }
 }
 
@@ -109,7 +107,5 @@ h1 {
 
     .login {
         width: 100%;
-        margin-top: 2vh;
-        margin-bottom: 10vh;
     }
 }
