--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,6 +5,7 @@
     --dark-yellow: #ed9a00;
     --darker-yellow: #d08701;
     --main-text: #3b3b3b;
+    --border-gray: rgb(163, 163, 163);
 }
 
 body {
