--- a/frontend/src/components/Login/Login.module.css
+++ b/frontend/src/components/Login/Login.module.css
@@ -26,9 +26,9 @@
 }
 
 .formItem input {
-    background-color: #f5f5f5;
+    background-color: #f8f8f8;
     border: none;
-    border: 1px solid rgb(181, 181, 181);
+    border: 1px solid rgb(163, 163, 163);
     height: 2rem;
     width: 22rem;
     font-size: 1rem;
@@ -70,9 +70,13 @@
 }
 
 .errorMessage {
-    color: rgb(195, 0, 0);
-    font-size: 0.9rem;
-    margin: auto;
+    height: 1.3rem;
+    color: rgba(180, 0, 0, 0.9);
+    font-size: 0.75rem;
+    text-align: center;
+    margin-left: 1.5rem;
+    font-weight: bold;
+    width: 100%;
 }
 
 @media (max-width: 68rem) {
