--- a/frontend/src/components/Registration/Registration.module.css
+++ b/frontend/src/components/Registration/Registration.module.css
@@ -23,15 +23,13 @@
 .formItem,
 .select {
     font-size: 1rem;
-    margin: 0.5rem 0;
 }
 
 .formItem input,
-.checkbox,
 .select {
-    background-color: #f5f5f5;
+    background-color: #f8f8f8;
     border: none;
-    border: 1px solid rgb(181, 181, 181);
+    border: 1px solid rgb(163, 163, 163);
     height: 2rem;
     width: 22rem;
     font-size: 1rem;
@@ -77,6 +75,58 @@
     font-size: 0.8rem;
     color: var(--dark-yellow);
     align-self: center;
+}
+
+.formItem .errorInput,
+.select.errorInput {
+    border: 2px solid rgba(180, 0, 0, 0.9);
+}
+
+.errorMessage {
+    height: 1.3rem;
+    color: rgba(180, 0, 0, 0.9);
+    font-size: 0.75rem;
+    text-align: left;
+    font-weight: bold;
+    width: 100%;
+    margin-left: 0.5rem;
+}
+
+.errorMessagePasswordWeak {
+    color: rgb(255, 208, 0);
+}
+
+.password {
+    position: relative;
+}
+
+.password .tooltip {
+    visibility: hidden;
+    width: 20rem;
+    height: auto;
+    background-color: rgb(39, 39, 39);
+    color: white;
+    font-size: 0.9rem;
+    text-align: left;
+    word-wrap: normal;
+    border-radius: 6px;
+    padding: 0.3rem;
+
+    position: absolute;
+    z-index: 1;
+    bottom: 2.5rem;
+}
+
+.password:hover .tooltip {
+    visibility: visible;
+}
+
+.formItem .mediumStrengthPassword {
+    border: 2px solid rgb(255, 208, 0);
+}
+
+.passwordStrong {
+    border: 2px solid rgb(67, 148, 0);
 }
 
 @media (max-width: 68rem) {
