--- a/frontend/src/pages/Homepage/Homepage.module.css
+++ b/frontend/src/pages/Homepage/Homepage.module.css
@@ -26,7 +26,7 @@
     padding-left: 0.5rem;
     margin-top: 3rem;
     background-color: #f5f5f5;
-    border: 1px solid rgb(91, 91, 91);
+    border: 1px solid var(--border-gray);
     height: 2.5rem;
     width: 100%;
 }
