--- a/frontend/src/pages/Homepage/Homepage.module.css
+++ b/frontend/src/pages/Homepage/Homepage.module.css
@@ -3,6 +3,7 @@
     justify-content: center;
     align-items: center;
     height: calc(100vh - 3.5rem);
+    padding-top: 3.5rem;
 
     background: url('../../images/bg2.jpg') center/cover;
 }
