Finished add interview information. Finished data validation.

--- a/frontend/src/components/StarRate/InteractiveStarRate/InteractiveStarRate.module.css
+++ b/frontend/src/components/StarRate/InteractiveStarRate/InteractiveStarRate.module.css
@@ -2,12 +2,14 @@
     color: var(--yellow);
     height: 1.5rem;
     width: 1.5rem;
+    cursor: pointer;
 }
 
 .starNo {
     color: #cfcfcf;
     height: 1.5rem;
     width: 1.5rem;
+    cursor: pointer;
 }
 
 @media(max-width: 40rem) {
