--- a/frontend/src/components/Company/CompanyProfile/CompanyProfileInterview/AddInterview/AddInterview.module.css
+++ b/frontend/src/components/Company/CompanyProfile/CompanyProfileInterview/AddInterview/AddInterview.module.css
@@ -4,7 +4,7 @@
     padding: 1rem;
     border: 1px solid #888;
     width: 50%;
-    height: 60%;
+    height: 80%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     animation-name: animatetop;
     animation-duration: 0.4s;
@@ -53,23 +53,10 @@
     align-items: flex-start;
 }
 
-.row {
-    display: flex;
-    align-items: center;
-    margin-top: 1rem;
-}
-
 .input {
     width: 100%;
     height: 2rem;
     margin-bottom: 1rem;
-}
-
-.checkbox {
-    height: 1.5rem;
-    width: 1.5rem;
-    margin-right: 0.5rem;
-    margin-bottom: 0.7rem;
 }
 
 .footer {
@@ -101,6 +88,18 @@
 
 .ratingTitle {
     margin-bottom: 0.4rem;
+}
+
+.select {
+    width: 100%;
+    height: 2rem;
+    margin-bottom: 1rem;
+    position: relative;
+    font-size: 1rem;
+}
+
+.selectOption {
+    font-size: 1rem;
 }
 
 .error {
