--- a/frontend/src/components/Company/CompanyProfile/CompanyProfileSalary/AddSalary/AddSalary.module.css
+++ b/frontend/src/components/Company/CompanyProfile/CompanyProfileSalary/AddSalary/AddSalary.module.css
@@ -4,7 +4,7 @@
     padding: 1rem;
     border: 1px solid #888;
     width: 50%;
-    height: 50%;
+    height: 40%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     animation-name: animatetop;
     animation-duration: 0.4s;
@@ -53,29 +53,10 @@
     align-items: flex-start;
 }
 
-.row {
-    display: flex;
-    align-items: center;
-    margin-top: 1rem;
-}
-
 .input {
     width: 100%;
     height: 2rem;
     margin-bottom: 1rem;
-}
-
-.inputMark {
-    width: 20%;
-    height: 2rem;
-    margin-bottom: 1rem;
-}
-
-.checkbox {
-    height: 1.5rem;
-    width: 1.5rem;
-    margin-right: 0.5rem;
-    margin-bottom: 0.7rem;
 }
 
 .footer {
@@ -91,29 +72,12 @@
     height: 2.2rem;
     border-radius: 20px;
     border-style: none;
+    cursor: pointer;
 }
 
 .fieldTitle {
     display: flex;
     align-items: flex-end;
-}
-
-.error {
-    color: rgba(180, 0, 0, 0.9);
-    font-size: 0.75rem;
-    text-align: left;
-    font-weight: bold;
-    height: 1.5rem;
-}
-
-.inputArea {
-    width: 100%;
-    height: 4rem;
-    margin-bottom: 1rem;
-}
-
-.ratingTitle {
-    margin-bottom: 0.4rem;
 }
 
 .select {
@@ -126,4 +90,12 @@
 
 .selectOption {
     font-size: 1rem;
+}
+
+.error {
+    color: rgba(180, 0, 0, 0.9);
+    font-size: 0.75rem;
+    text-align: left;
+    font-weight: bold;
+    height: 1.5rem;
 }
