--- a/frontend/src/components/Company/CompanyProfile/CompanyProfileSalary/AddSalary/AddSalary.module.css
+++ b/frontend/src/components/Company/CompanyProfile/CompanyProfileSalary/AddSalary/AddSalary.module.css
@@ -1,16 +1,16 @@
 .modal {
     background-color: white;
-    margin: 20% auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     padding: 1rem;
     border: 1px solid #888;
     width: 50%;
-    height: 40%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     animation-name: animatetop;
     animation-duration: 0.4s;
-    border-radius: 1%;
-    z-index: 1;
-    overflow-y: scroll;
+    z-index: 101;
 }
 
 .fallback {
@@ -18,8 +18,9 @@
     left: 0;
     top: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     overflow: auto;
+    z-index: 100;
     background-color: rgba(0, 0, 0, 0.4);
 }
 
@@ -29,7 +30,7 @@
         opacity: 0
     }
     to {
-        top: 0;
+        top: 50%;
         opacity: 1
     }
 }
