--- a/frontend/src/components/Company/AllCompanies/AllCompanies.module.css
+++ b/frontend/src/components/Company/AllCompanies/AllCompanies.module.css
@@ -1,12 +1,19 @@
 .component {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    margin: 2rem 0;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 1.5rem;
     width: 100%;
+}
+
+@media(max-width: 65rem) {
+    .component {
+        grid-template-columns: 1fr 1fr;
+    }
 }
 
 @media(max-width: 40rem) {
     .component {
-        flex-direction: column;
+        grid-template-columns: 1fr;
     }
 }
