--- a/frontend/src/components/Jobs/AllJobs/AllJobs.module.css
+++ b/frontend/src/components/Jobs/AllJobs/AllJobs.module.css
@@ -1,5 +1,12 @@
 .component {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+    margin: 2rem 0;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 1.5rem;
+}
+
+@media(max-width: 65rem) {
+    .component {
+        grid-template-columns: 1fr;
+    }
 }
