--- a/frontend/src/components/Jobs/Job/Job.module.css
+++ b/frontend/src/components/Jobs/Job/Job.module.css
@@ -1,5 +1,5 @@
 .component {
-    width: 47%;
+    width: calc(100% - 2rem);
 
     display: flex;
     align-items: flex-start;
@@ -7,7 +7,6 @@
 
     padding: 2rem 1rem;
     box-shadow: 2px 2px 15px #cfcfcf;
-    margin: 1rem 0;
     text-align: left;
     cursor: pointer;
 }
@@ -68,15 +67,8 @@
     font-size: 0.9rem;
 }
 
-@media(max-width: 65rem) {
-    .component {
-        width: 100%;
-    }
-}
-
 @media(max-width: 40rem) {
     .component {
-        flex-direction: column;
         align-items: center;
         text-align: center;
     }
