--- a/frontend/src/components/Company/CompanyProfile/CompanyProfileInterview/AddInterview/AddInterview.module.css
+++ b/frontend/src/components/Company/CompanyProfile/CompanyProfileInterview/AddInterview/AddInterview.module.css
@@ -1,16 +1,18 @@
 .modal {
     background-color: white;
-    margin: 20% auto;
     padding: 1rem;
     border: 1px solid #888;
     width: 50%;
-    height: 80%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     animation-name: animatetop;
     animation-duration: 0.4s;
-    border-radius: 1%;
-    z-index: 1;
-    overflow-y: scroll;
+    z-index: 201;
+    overflow-y: hidden;
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .fallback {
@@ -21,6 +23,7 @@
     height: 100%;
     overflow: auto;
     background-color: rgba(0, 0, 0, 0.4);
+    z-index: 200;
 }
 
 @keyframes animatetop {
@@ -53,10 +56,25 @@
     align-items: flex-start;
 }
 
-.input {
-    width: 100%;
+.input, .select {
+    width: calc(100% - 1rem);
     height: 2rem;
     margin-bottom: 1rem;
+    font-size: 0.9rem;
+
+    background-color: white;
+    border: 1px solid #cacaca;
+    padding: 0.5rem;
+    font-family: inherit;
+    color: var(--main-text);
+}
+
+.input:focus, .select:focus {
+    outline: none;
+}
+
+.select {
+    padding: 0;
 }
 
 .footer {
@@ -64,15 +82,22 @@
     justify-content: flex-end;
 }
 
-.saveButton {
+.button {
+    width: 18%;
+    height: 2.6rem;
+    font-size: 1rem;
     background-color: var(--yellow);
     color: white;
     border: 1px solid var(--yellow);
-    width: 4rem;
-    height: 2.2rem;
-    border-radius: 20px;
-    border-style: none;
+    font-family: inherit;
     cursor: pointer;
+}
+
+.button:hover,
+.button:active {
+    color: var(--dark-yellow);
+    background-color: #fff4df;
+    border: 1px solid var(--dark-yellow);
 }
 
 .fieldTitle {
@@ -81,15 +106,23 @@
 }
 
 .inputArea {
-    width: 100%;
+    width: calc(100% - 1rem);
     height: 4rem;
     margin-bottom: 1rem;
+    font-size: 0.9rem;
+    font-family: inherit;
+
+    background-color: white;
+    border: 1px solid #cacaca;
+    padding: 0.5rem;
+    font-family: inherit;
+    color: var(--main-text);
 }
 
 .ratingTitle {
-    margin-bottom: 0.4rem;
+    margin-right: 1rem;
+    margin-bottom: 0.2rem;
 }
-
 .select {
     width: 100%;
     height: 2rem;
