--- a/frontend/src/components/Company/CompanyProfile/CompanyProfileSalary/AddSalary/AddSalary.module.css
+++ b/frontend/src/components/Company/CompanyProfile/CompanyProfileSalary/AddSalary/AddSalary.module.css
@@ -10,7 +10,7 @@
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     animation-name: animatetop;
     animation-duration: 0.4s;
-    z-index: 101;
+    z-index: 201;
 }
 
 .fallback {
@@ -20,7 +20,7 @@
     width: 100%;
     height: 100vh;
     overflow: auto;
-    z-index: 100;
+    z-index: 200;
     background-color: rgba(0, 0, 0, 0.4);
 }
 
@@ -54,10 +54,25 @@
     align-items: flex-start;
 }
 
-.input {
-    width: 100%;
+.input, .select {
+    width: calc(100% - 1rem);
     height: 2rem;
     margin-bottom: 1rem;
+    font-size: 0.9rem;
+
+    background-color: white;
+    border: 1px solid #cacaca;
+    padding: 0.5rem;
+    font-family: inherit;
+    color: var(--main-text);
+}
+
+.select {
+    padding: 0;
+}
+
+.input:focus, .select:focus {
+    outline: none;
 }
 
 .footer {
@@ -65,15 +80,22 @@
     justify-content: flex-end;
 }
 
-.saveButton {
+.button {
+    width: 18%;
+    height: 2.6rem;
+    font-size: 1rem;
     background-color: var(--yellow);
     color: white;
     border: 1px solid var(--yellow);
-    width: 4rem;
-    height: 2.2rem;
-    border-radius: 20px;
-    border-style: none;
+    font-family: inherit;
     cursor: pointer;
+}
+
+.button:hover,
+.button:active {
+    color: var(--dark-yellow);
+    background-color: #fff4df;
+    border: 1px solid var(--dark-yellow);
 }
 
 .fieldTitle {
