--- a/frontend/src/components/Company/CompanySearch/CompanySearch.module.css
+++ b/frontend/src/components/Company/CompanySearch/CompanySearch.module.css
@@ -45,6 +45,26 @@
     margin-right: -1px;
 }
 
+.buttonJob {
+    width: 20%;
+    height: 2.6rem;
+    font-size: 1rem;
+    background-color:white;
+    color: var(--dark-yellow);
+    border: 1px solid var(--dark-yellow);
+    font-family: inherit;
+    cursor: pointer;
+    margin-right: -1px;
+    margin-left: 1px;
+}
+
+.buttonJob:hover,
+.buttonJob:active {
+    background-color: var(--dark-yellow);
+    color: white;
+    border: 1px solid var(--dark-yellow);
+}
+
 .button:hover,
 .button:active {
     color: var(--dark-yellow);
