--- a/frontend/src/components/Jobs/CreateJobOffer/CreateJobOffer.module.css
+++ b/frontend/src/components/Jobs/CreateJobOffer/CreateJobOffer.module.css
@@ -3,20 +3,17 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-
     background: url('../../../images/bg2.jpg') center/cover;
 }
 
-
 @media (max-width: 40rem) {
     .page {
-        flex-direction: column-reverse;
+        flex-direction: column;
     }
 }
 
-
-
 .form {
+    margin-top: 2rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -24,13 +21,6 @@
     justify-content: center;
     background-color: #ffff;
     width: 35rem;
-    height: 70%;
-    border-radius: 4px;
-}
-
-h1 {
-    font-size: 3rem;
-    margin-bottom: 2rem;
 }
 
 .formItem {
@@ -59,11 +49,9 @@ h1 {
 .formItem input {
     background-color: rgb(235, 235, 235);
     border: none;
-    border-radius: 4px;
-    height: 3rem;
+    height: 2rem;
     width: 22rem;
     font-size: 1rem;
-    margin-left: 0.5rem;
     font-family: inherit;
     padding: 0 0.5rem;
 }
@@ -71,13 +59,11 @@ h1 {
 .formItem .textarea{
     background-color: rgb(235, 235, 235);
     border: none;
-    border-radius: 4px;
-    min-height: 3rem;
+    min-height: 2rem;
     width: 22rem;
     font-size: 1rem;
-    margin-left: 0.5rem;
     font-family: inherit;
-    padding: 0 0.5rem;
+    padding: 0.3rem 0.5rem;
     resize: none;
 }
 
@@ -103,7 +89,6 @@ h1 {
     background-color: var(--yellow);
     color: white;
     border: none;
-    border-radius: 25px;
     font-family: inherit;
 }
 
@@ -118,34 +103,14 @@ h1 {
     width: 100%;
     max-width: 23rem;
     align-self: center;
-    margin-top: 1rem;
     margin-bottom: 1rem;
     height: 3rem;
     font-size: 1rem;
     border: none;
-    border-radius: 25px;
     font-family: inherit;
 }
 
-.forgotPasswordDiv{
-    display: flex;
-    width: 100%;
-    flex-direction: row;
-    justify-content: flex-start;
-    padding: 0.5rem;
-}
-
-
-.registerLink {
-    font-size: 0.8rem;
-    color: var(--dark-red);
-    align-self: center;
-}
-
 @media (max-width: 60rem) {
-    h1 {
-        font-size: 3.5rem;
-    }
 
     .formItem input {
         width: 19rem;
@@ -169,11 +134,19 @@ h1 {
 }
 
 .select{
-    width: 22rem;
+    width: 23rem;
     height: 2.5rem;
     cursor: pointer;
     background-color: #eae9e7;
     border: none;
-    margin-left: 0.5rem;
     padding: 0 0.5rem;
+}
+
+.select:focus {
+    outline: none;
+}
+
+.formLabel {
+    font-size: 0.9rem;
+    margin-bottom: 0.2rem;
 }
