--- a/frontend/src/components/Jobs/CreateJobOffer/CreateJobOffer.module.css
+++ b/frontend/src/components/Jobs/CreateJobOffer/CreateJobOffer.module.css
@@ -150,3 +150,10 @@
     font-size: 0.9rem;
     margin-bottom: 0.2rem;
 }
+
+.companyLabel{
+    width: 100%;
+    background-color:#eae9e7 ;
+    height: 2.5rem;
+    text-align: start;
+}
